--- a/README
+++ b/README
@@ -3,3 +3,5 @@ to set up bot on local
 --search botfather on telegram
 --create new bot
 --follow instructions lmao
+
+--make sure to install pytelegrambotapi
